; ModuleID = '/home/carl/AnghaBench/systemd/src/boot/extr_bootctl.c_remove_file.c'
source_filename = "/home/carl/AnghaBench/systemd/src/boot/extr_bootctl.c_remove_file.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@errno = common dso_local global i32 0, align 4
@ENOENT = common dso_local global i32 0, align 4
@LOG_DEBUG = common dso_local global i32 0, align 4
@LOG_ERR = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [31 x i8] c"Failed to unlink file \22%s\22: %m\00", align 1
@.str.1 = private unnamed_addr constant [14 x i8] c"Removed \22%s\22.\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i8*)* @remove_file to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @remove_file(i8* %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  store i8* %0, i8** %4, align 8
  store i8* %1, i8** %5, align 8
  %7 = load i8*, i8** %4, align 8
  %8 = call i32 @assert(i8* %7)
  %9 = load i8*, i8** %5, align 8
  %10 = call i32 @assert(i8* %9)
  %11 = load i8*, i8** %4, align 8
  %12 = load i8*, i8** %5, align 8
  %13 = call i8* @prefix_roota(i8* %11, i8* %12)
  store i8* %13, i8** %6, align 8
  %14 = load i8*, i8** %6, align 8
  %15 = call i64 @unlink(i8* %14)
  %16 = icmp slt i64 %15, 0
  br i1 %16, label %17, label %39

17:                                               ; preds = %2
  %18 = load i32, i32* @errno, align 4
  %19 = load i32, i32* @ENOENT, align 4
  %20 = icmp eq i32 %18, %19
  br i1 %20, label %21, label %23

21:                                               ; preds = %17
  %22 = load i32, i32* @LOG_DEBUG, align 4
  br label %25

23:                                               ; preds = %17
  %24 = load i32, i32* @LOG_ERR, align 4
  br label %25

25:                                               ; preds = %23, %21
  %26 = phi i32 [ %22, %21 ], [ %24, %23 ]
  %27 = load i32, i32* @errno, align 4
  %28 = load i8*, i8** %6, align 8
  %29 = call i32 @log_full_errno(i32 %26, i32 %27, i8* getelementptr inbounds ([31 x i8], [31 x i8]* @.str, i64 0, i64 0), i8* %28)
  %30 = load i32, i32* @errno, align 4
  %31 = load i32, i32* @ENOENT, align 4
  %32 = icmp eq i32 %30, %31
  br i1 %32, label %33, label %34

33:                                               ; preds = %25
  br label %37

34:                                               ; preds = %25
  %35 = load i32, i32* @errno, align 4
  %36 = sub nsw i32 0, %35
  br label %37

37:                                               ; preds = %34, %33
  %38 = phi i32 [ 0, %33 ], [ %36, %34 ]
  store i32 %38, i32* %3, align 4
  br label %42

39:                                               ; preds = %2
  %40 = load i8*, i8** %6, align 8
  %41 = call i32 @log_info(i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.1, i64 0, i64 0), i8* %40)
  store i32 1, i32* %3, align 4
  br label %42

42:                                               ; preds = %39, %37
  %43 = load i32, i32* %3, align 4
  ret i32 %43
}

declare dso_local i32 @assert(i8*) #1

declare dso_local i8* @prefix_roota(i8*, i8*) #1

declare dso_local i64 @unlink(i8*) #1

declare dso_local i32 @log_full_errno(i32, i32, i8*, i8*) #1

declare dso_local i32 @log_info(i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
